# Custom_MCP

./: .env  .gitignore  Browser_Automation.py  Fast_Secured_MCP_File_Manager.py  MCP_File_Manager.py  README.md  __init__.py  command_executor_mcp.py  config.json  openai_chat.py  pyproject.toml  ultimate_speed_test.py  updated_mcp_server.py
.github/workflows/: test.yml
New/Implement/: .env.example  ALIGNMENT_AUDIT.md  DELIVERABLE_RATING.md  PRODUCTION.md  README.md  browser_mcp.py  config.json  cursor-mcp.example.json  pyproject.toml  setup.ps1
New/Implement/browser/: __init__.py  actions.py  audit.py  config.py  errors.py  guards.py  security.py  session.py  state.py
New/Implement/browser_agent/: __init__.py  agent.py  mcp_server.py  tools.py
New/Implement/tests/: test_agent.py  test_browser_core.py  test_browser_integration.py  test_mcp_smoke.py  test_security.py
New/Plan/: DOCUMENT_DELIVERY_PLAN.md  IMPLEMENTATION_CHECKLIST.md  MASTER_PLAN.md  PLAN_ITERATION_LOG.md  README.md  RISK_REGISTER.md  SECURITY.md  STRICT_IMPLEMENTATION_PLAN.md  TEST_PLAN.md
New/Plan/adr/: 001-playwright-over-selenium.md  002-no-browser-use.md  003-langchain-litellm.md  004-indexed-dom-not-vision.md  005-dual-path-architecture.md  README.md
New/Plan/flow-logic/: FLOW_LOGIC.md  LATEX_PLAN.md  browser-flow-framework.aux  browser-flow-framework.out  browser-flow-framework.tex  browser-flow-framework.toc  build.ps1
New/Plan/tech-plan/: LATEX_PLAN.md  TECHNICAL_PLAN.md  build.ps1  tech-plan.aux  (+3 more)
Old/: Browser_Agent.py  Browser_Automation_Fast.py  config.json  requirements.txt
(+12 files in other folders)
